# pegd

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  tsconfig.base.json
.github/workflows/: ci.yml
docs/: architecture.md  attestation-layout.md  error-codes.md  issuance-spec.md  por-spec.md  security.md
examples/: README.md  inspect-reserves.ts  quote-issuance.ts  register-stable.ts
programs/pegd_compliance_hook/: Cargo.toml
programs/pegd_compliance_hook/src/: lib.rs
programs/pegd_issuance/: Cargo.toml
programs/pegd_issuance/src/: error.rs  events.rs  lib.rs
programs/pegd_issuance/src/instructions/: attest.rs  burn.rs  configure_attestors.rs  deposit.rs  initialize.rs  mint.rs  mod.rs  pause.rs  register.rs
programs/pegd_issuance/src/state/: attestation.rs  attestor_set.rs  config.rs  mod.rs  stable.rs  vault.rs
tests/: pegd_issuance.ts  tsconfig.json
ts/cli/: build.mjs  package.json
ts/cli/src/: cli.ts  config.ts
ts/cli/src/commands/: burn.ts  issue.ts  mint.ts  por.ts  reserves.ts  stress.ts
ts/issuance-core/: package.json
ts/issuance-core/src/: index.ts  modes.ts  quote.ts  vault.ts
ts/risk-module/: package.json
ts/risk-module/src/: circuit-breaker.ts  index.ts  liquidation.ts  thresholds.ts
ts/sdk/: package.json
ts/sdk/src/: index.ts  issuer.ts  types.ts
ts/sdk/src/idl/: pegd_issuance.json
ts/yield-engine/: package.json
ts/yield-engine/src/: accrual.ts  index.ts  interest-bearing.ts
